[gd_scene load_steps=2 format=3 uid="uid://xq7asg1xnccq"]

[ext_resource type="Script" path="res://scripts/level_completed.gd" id="1_sm7ab"]

[node name="LevelCompleted" type="CanvasLayer"]
visible = false
script = ExtResource("1_sm7ab")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You completed the level in: "

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
text = "Main Menu!"

[node name="NextLevelButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
text = "Next Level!"

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
text = "Retry!"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
